--- a/coccinelle.opam
+++ b/coccinelle.opam
@@ -20,7 +20,7 @@ depends: [
   "ocamlfind"
   "pcre"
   "stdcompat"
-  "pyml"
+  "pyml" { >= "20171117" }
   "conf-pkg-config"
   "conf-python-3"
   "conf-python-3-dev"
