The existence of ocamlfind does not imply working ocamlfind ocamlopt
Signed-off-by: Christopher Zimmermann <madroach@gmerlin.de>

--- a/bundles/stdcompat/stdcompat-current/configure.ac
+++ b/bundles/stdcompat/stdcompat-current/configure.ac
@@ -33,7 +33,8 @@ AS_IF([test "x$OCAMLFIND" = "x"],
    AC_SUBST([SEQ_PKG], [])
    AC_SUBST([UCHAR_PKG], [])],
   [AC_SUBST([OCAMLC], [["$OCAMLFIND ocamlc"]])
-   AC_SUBST([OCAMLOPT], [["$OCAMLFIND ocamlopt"]])
+   AS_IF([$OCAMLFIND ocamlopt],
+     AC_SUBST([OCAMLOPT], [["$OCAMLFIND ocamlopt"]]))
    AC_SUBST([OCAMLDOC], [["$OCAMLFIND ocamldoc"]])
    AC_SUBST([OCAMLDEP], [["$OCAMLFIND ocamldep"]])
    AC_SUBST([OCAMLMKLIB], [["$OCAMLFIND ocamlmklib"]])
