add dot on depends in make target

--- a/bundles/parmap/parmap/Makefile_3.11.in
+++ b/bundles/parmap/parmap/Makefile_3.11.in
@@ -72,8 +72,10 @@ examples:
 .ml.cmx:
 	$(OCAMLOPT) -package "$(REQUIRES)" -c $<
 
-depend: *.ml *.mli
+.depend: *.ml *.mli
 	$(OCAMLDEP) *.ml *.mli >.depend
+
+depend: .depend
 
 include .depend
 
