Change PYML_ARCH initialization

--- a/bundles/pyml/Makefile
+++ b/bundles/pyml/Makefile
@@ -24,22 +24,14 @@ CLEANOTHERS=pyml-current/generate pyml-current/generate.cmi \
 GENERATED_SOURCE_FILES := $(SRC_DIR)/pywrappers.ml $(SRC_DIR)/pywrappers.mli
 OCAMLCCFLAGS+=-ccopt -I$(STDCOMPATDIR)
 
-ARCH:=$(shell uname)
+UNAME_ARCH := $(shell uname)
 
-ifeq ($(ARCH),Linux)
-	PYML_ARCH=pyml_arch_linux.ml
-else ifeq ($(ARCH),Darwin)
-	PYML_ARCH=pyml_arch_darwin.ml
-else ifeq ($(findstring CYGWIN,$(ARCH)),CYGWIN)
-	PYML_ARCH=pyml_arch_cygwin.ml
-else ifeq ($(ARCH),OpenBSD)
-	PYML_ARCH=pyml_arch_linux.ml
-else ifeq ($(ARCH),NetBSD)
-	PYML_ARCH=pyml_arch_linux.ml
-else ifeq ($(ARCH),FreeBSD)
-	PYML_ARCH=pyml_arch_linux.ml
+ifeq ($(UNAME_ARCH),Darwin)
+	PYML_ARCH := pyml_arch_darwin.ml
+else ifeq ($(findstring CYGWIN,$(UNAME_ARCH)),CYGWIN)
+	PYML_ARCH := pyml_arch_cygwin.ml
 else
-	$(error Unsupported OS $(ARCH))
+	PYML_ARCH := pyml_arch_unix.ml
 endif
 
 include ../Makefile.bundles
